traefik/nginx/nginx-12.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-12
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-12
  template:
    metadata:
      labels:
        app: nginx-12
    spec:
      volumes:
      - name: host-time
        hostPath:
          path: /etc/localtime
      containers:
      - name: nginx
        image: nginx:1.12-alpine
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: host-time
          mountPath: /etc/localtime
          readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-12
spec:
  selector:
    app: nginx-12
  ports:
  - name: http
    port: 80
    targetPort: 80
